# silly-synthesizer

./: .gitignore  CMakeLists.txt  main.cpp  synthesizer.cpp  synthesizer.h  utils.cpp  utils.h  wavefile.cpp  wavefile.h
